force-app/main/default/objects/Enquiry__c/fields/Account_All_Emails__c.field-meta.xml
<CustomField>
    <fullName>Account_All_Emails__c</fullName>
    <formula>Contact_Person__r.Email_1__c &amp; &quot;;&quot; &amp;
Contact_Person__r.Email_2__c &amp; &quot;;&quot; &amp;
Contact_Person__r.Email_3__c</formula>
    <label>Account All Emails</label>
    <type>Text</type>
</CustomField>