force-app/main/default/objects/Enquiry__c/fields/Additional_Specification_if_any__c.field-meta.xml
<CustomField>
    <fullName>Additional_Specification_if_any__c</fullName>
    <label>Additional Specification if any</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>