force-app/main/default/objects/Enquiry__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address1</label>
    <type>Address</type>
</CustomField>