force-app/main/default/objects/Enquiry__c/fields/Are_you_looking_for_yourself_or_tenant__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for_yourself_or_tenant__c</fullName>
    <label>Are you looking for yourself or tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Myself</fullName>
            </value>
            <value>
                <fullName>For Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>