force-app/main/default/objects/Enquiry__c/fields/Billing_Adderess__c.field-meta.xml
<CustomField>
    <fullName>Billing_Adderess__c</fullName>
    <label>Billing Adderess</label>
    <type>Address</type>
</CustomField>