force-app/main/default/objects/Enquiry__c/fields/Call_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Detail_Id__c</fullName>
    <label>Call Detail Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>