force-app/main/default/objects/Enquiry__c/fields/Can_i_know_your_co_s_name__c.field-meta.xml
<CustomField>
    <fullName>Can_i_know_your_co_s_name__c</fullName>
    <label>Can i know your co&apos;s name ?</label>
    <type>TextArea</type>
</CustomField>