force-app/main/default/objects/Enquiry__c/fields/can_you_please_share_your_email_id__c.field-meta.xml
<CustomField>
    <fullName>can_you_please_share_your_email_id__c</fullName>
    <label>can you please share your email id</label>
    <type>Email</type>
</CustomField>