force-app/main/default/objects/Enquiry__c/fields/Canteen_requirement_if_any__c.field-meta.xml
<CustomField>
    <fullName>Canteen_requirement_if_any__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canteen requirement if any</label>
    <type>Checkbox</type>
</CustomField>