force-app/main/default/objects/Enquiry__c/fields/Capacity_of_Power_Back_Up__c.field-meta.xml
<CustomField>
    <fullName>Capacity_of_Power_Back_Up__c</fullName>
    <label>Capacity of Power Back Up ?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>