force-app/main/default/objects/Enquiry__c/fields/Cold_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Cold_Storage_Type__c</fullName>
    <label>Cold Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Chiller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>