force-app/main/default/objects/Enquiry__c/fields/Contact_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contact_Comments__c</fullName>
    <label>Contact Comments</label>
    <type>TextArea</type>
</CustomField>