force-app/main/default/objects/Enquiry__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>