force-app/main/default/objects/Enquiry__c/fields/Customer_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirement__c</fullName>
    <label>Customer Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>