force-app/main/default/objects/Enquiry__c/fields/Date_of_possession_required__c.field-meta.xml
<CustomField>
    <fullName>Date_of_possession_required__c</fullName>
    <label>Date of  possession required</label>
    <type>Date</type>
</CustomField>