force-app/main/default/objects/Enquiry__c/fields/do_you_require_any_other_amenities__c.field-meta.xml
<CustomField>
    <fullName>do_you_require_any_other_amenities__c</fullName>
    <label>do you require any other amenities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>