force-app/main/default/objects/Enquiry__c/fields/Do_you_Require_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Do_you_Require_Insulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you Require Insulation?</label>
    <type>Checkbox</type>
</CustomField>