force-app/main/default/objects/Enquiry__c/fields/do_you_require_Office_space__c.field-meta.xml
<CustomField>
    <fullName>do_you_require_Office_space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>do you require Office space</label>
    <type>Checkbox</type>
</CustomField>