force-app/main/default/objects/Enquiry__c/fields/do_you_require_Open_Land_Area_fo__c.field-meta.xml
<CustomField>
    <fullName>do_you_require_Open_Land_Area_fo__c</fullName>
    <label>do you require Open Land Area fo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>parking</fullName>
            </value>
            <value>
                <fullName>external storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>