force-app/main/default/objects/Enquiry__c/fields/do_you_require_racks_for_storage__c.field-meta.xml
<CustomField>
    <fullName>do_you_require_racks_for_storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>do you require racks for storage ?</label>
    <type>Checkbox</type>
</CustomField>