force-app/main/default/objects/Enquiry__c/fields/Enquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Number__c</fullName>
    <displayFormat>EN-{000000}</displayFormat>
    <label>Enquiry Number</label>
    <type>AutoNumber</type>
</CustomField>