force-app/main/default/objects/Enquiry__c/fields/Enquiry_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Sub_Source__c</fullName>
    <label>Enquiry Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Enquiry_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Enquiry_Sub_Source</valueSetName>
    </valueSet>
</CustomField>