force-app/main/default/objects/Enquiry__c/fields/enqury_Name__c.field-meta.xml
<CustomField>
    <fullName>enqury_Name__c</fullName>
    <label>enqury Name</label>
    <type>Address</type>
</CustomField>