force-app/main/default/objects/Enquiry__c/fields/First_Aid_rooms_requirement_if_any__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_rooms_requirement_if_any__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Aid rooms requirement if any</label>
    <type>Checkbox</type>
</CustomField>