force-app/main/default/objects/Enquiry__c/fields/Follow_Up_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Reminder__c</fullName>
    <label>Follow Up Reminder</label>
    <type>DateTime</type>
</CustomField>