force-app/main/default/objects/Enquiry__c/fields/Height_of_the_dock__c.field-meta.xml
<CustomField>
    <fullName>Height_of_the_dock__c</fullName>
    <label>Height of the dock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5m</fullName>
            </value>
            <value>
                <fullName>0.8m</fullName>
            </value>
            <value>
                <fullName>1m</fullName>
            </value>
            <value>
                <fullName>1.2m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>