force-app/main/default/objects/Enquiry__c/fields/how_much_EOT_Capacity_in_Tons_do_you_req__c.field-meta.xml
<CustomField>
    <fullName>how_much_EOT_Capacity_in_Tons_do_you_req__c</fullName>
    <label>how much EOT Capacity in Tons do you req</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>