force-app/main/default/objects/Enquiry__c/fields/how_much_power_is_needed_kva__c.field-meta.xml
<CustomField>
    <fullName>how_much_power_is_needed_kva__c</fullName>
    <label>how much power is needed?kva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>