force-app/main/default/objects/Enquiry__c/fields/how_urgent_is_the_requirement__c.field-meta.xml
<CustomField>
    <fullName>how_urgent_is_the_requirement__c</fullName>
    <label>how urgent is the requirement ?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>