force-app/main/default/objects/Enquiry__c/fields/Intent_Type__c.field-meta.xml
<CustomField>
    <fullName>Intent_Type__c</fullName>
    <label>Intent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer_Lease_Enquiry</fullName>
                <label>Buyer</label>
            </value>
            <value>
                <fullName>Seller_Lease_Enquiry</fullName>
                <label>Seller</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>