force-app/main/default/objects/Enquiry__c/fields/is_Duplicate_Image__c.field-meta.xml
<CustomField>
    <fullName>is_Duplicate_Image__c</fullName>
    <formula>IF( Is_Duplicate__c == true, IMAGE(&apos;/resource/Red&apos;,&apos;Red&apos;, 30,30) , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Duplicate?</label>
    <type>Text</type>
</CustomField>