force-app/main/default/objects/Enquiry__c/fields/Is_EOT_Crane_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_EOT_Crane_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EOT Crane Required?</label>
    <type>Checkbox</type>
</CustomField>