force-app/main/default/objects/Enquiry__c/fields/Last_Follow_Up_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Day__c</fullName>
    <label>Last Follow Up Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>