force-app/main/default/objects/Enquiry__c/fields/location_of_Office_Space__c.field-meta.xml
<CustomField>
    <fullName>location_of_Office_Space__c</fullName>
    <label>location of Office Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>