force-app/main/default/objects/Enquiry__c/fields/Lock_in_period_minim_11months__c.field-meta.xml
<CustomField>
    <fullName>Lock_in_period_minim_11months__c</fullName>
    <label>Lock in period (minim 11months )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>