force-app/main/default/objects/Enquiry__c/fields/Lock_in_period_minim_3_yrs__c.field-meta.xml
<CustomField>
    <fullName>Lock_in_period_minim_3_yrs__c</fullName>
    <label>Lock in period (minim 3 yrs )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>