force-app/main/default/objects/Enquiry__c/fields/Lookup_Number__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Number__c</fullName>
    <externalId>true</externalId>
    <label>Lookup Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>