force-app/main/default/objects/Enquiry__c/fields/Nature_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Purchase__c</fullName>
    <label>Nature of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_of_Purchase</valueSetName>
    </valueSet>
</CustomField>