force-app/main/default/objects/Enquiry__c/fields/No_of_employees_shift_Ratio__c.field-meta.xml
<CustomField>
    <fullName>No_of_employees_shift_Ratio__c</fullName>
    <label>No of employees - shift / Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>