force-app/main/default/objects/Enquiry__c/fields/please_share_business_card_on_whatsapp__c.field-meta.xml
<CustomField>
    <fullName>please_share_business_card_on_whatsapp__c</fullName>
    <label>please share businesscard on whatsapp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>