force-app/main/default/objects/Enquiry__c/fields/Property_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Property_Sub_Category__c</fullName>
    <label>Property Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shed</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>