force-app/main/default/objects/Enquiry__c/fields/Reason_for_Closed__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closed__c</fullName>
    <label>Reason for Closed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>