force-app/main/default/objects/Enquiry__c/fields/Reason_for_Non_Qualifiation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Non_Qualifiation__c</fullName>
    <label>Reason for Non Qualifiation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_for_Closed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fake</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Budget Not Qualified</fullName>
            </value>
            <value>
                <fullName>Location Not Qualified</fullName>
            </value>
            <value>
                <fullName>Irrelevant Enquiry</fullName>
            </value>
            <value>
                <fullName>Referred to Residential Team - Luxclusive Homes</fullName>
            </value>
            <value>
                <fullName>Referred to Commercial Team - Chattels Retail</fullName>
            </value>
            <value>
                <fullName>Referred to Other Realtors</fullName>
            </value>
            <value>
                <fullName>Size not qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>