force-app/main/default/objects/Enquiry__c/fields/Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name__c</fullName>
    <label>Reference Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>