force-app/main/default/objects/Enquiry__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouses for Rent</fullName>
            </value>
            <value>
                <fullName>Shed for Rent</fullName>
            </value>
            <value>
                <fullName>Factory For Rent</fullName>
            </value>
            <value>
                <fullName>Cold Storage</fullName>
            </value>
            <value>
                <fullName>Industrial Property for Sale</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>