force-app/main/default/objects/Enquiry__c/fields/Restrooms__c.field-meta.xml
<CustomField>
    <fullName>Restrooms__c</fullName>
    <label>Restrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Collar</fullName>
            </value>
            <value>
                <fullName>White Collar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>