force-app/main/default/objects/Enquiry__c/fields/Restroomss__c.field-meta.xml
<CustomField>
    <fullName>Restroomss__c</fullName>
    <label>Restrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>