force-app/main/default/objects/Enquiry__c/fields/RNR_Comments__c.field-meta.xml
<CustomField>
    <fullName>RNR_Comments__c</fullName>
    <label>RNR Comments</label>
    <type>TextArea</type>
</CustomField>