force-app/main/default/objects/Enquiry__c/fields/RNR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RNR_Start_Date__c</fullName>
    <label>RNR Start Date</label>
    <type>Date</type>
</CustomField>