force-app/main/default/objects/Enquiry__c/fields/Site_Visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit Location</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>