force-app/main/default/objects/Enquiry__c/fields/Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Size_Acres__c</fullName>
    <label>Size (Acres)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 acre</fullName>
            </value>
            <value>
                <fullName>More than 1 acre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>