force-app/main/default/objects/Enquiry__c/fields/Size_in_sqfts__c.field-meta.xml
<CustomField>
    <fullName>Size_in_sqfts__c</fullName>
    <label>Size (in sqft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>