force-app/main/default/objects/Enquiry__c/fields/Size_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Size_Sqft__c</fullName>
    <label>Size (Sqft)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 10,000 sqft</fullName>
            </value>
            <value>
                <fullName>10,000 – 20,000 sqft</fullName>
            </value>
            <value>
                <fullName>20,000 – 40,000 sqft</fullName>
            </value>
            <value>
                <fullName>40,000 – 60,000 sqft</fullName>
            </value>
            <value>
                <fullName>60,000 – 80,000 sqft</fullName>
            </value>
            <value>
                <fullName>80,000 – 100,000 sqft</fullName>
            </value>
            <value>
                <fullName>More than 100,000 sqft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>