force-app/main/default/objects/Enquiry__c/fields/to_and_from_movement_of_materials_to_und__c.field-meta.xml
<CustomField>
    <fullName>to_and_from_movement_of_materials_to_und__c</fullName>
    <label>to and from movement of materials to und</label>
    <type>TextArea</type>
</CustomField>