force-app/main/default/objects/Enquiry__c/fields/Type_of_Unit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Unit__c</fullName>
    <label>Service Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Unit</valueSetName>
    </valueSet>
</CustomField>