force-app/main/default/objects/Enquiry__c/fields/type_of_vehicles_used_in_the_premises__c.field-meta.xml
<CustomField>
    <fullName>type_of_vehicles_used_in_the_premises__c</fullName>
    <label>type of vehicles used in the premises</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40ft</fullName>
            </value>
            <value>
                <fullName>20ft</fullName>
            </value>
            <value>
                <fullName>trucks</fullName>
            </value>
            <value>
                <fullName>tata ace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>