force-app/main/default/objects/Enquiry__c/fields/Types_of_F_W__c.field-meta.xml
<CustomField>
    <fullName>Types_of_F_W__c</fullName>
    <label>Types of F&amp;W</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>