force-app/main/default/objects/Enquiry__c/fields/Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category__c</fullName>
    <label>Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Category</valueSetName>
    </valueSet>
</CustomField>