force-app/main/default/objects/Enquiry__c/fields/what_is_the_Duration_of_Lease__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_Duration_of_Lease__c</fullName>
    <label>what is the Duration of Lease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>