force-app/main/default/objects/Enquiry__c/fields/what_is_the_floor_height_required__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_floor_height_required__c</fullName>
    <label>what is the floor height required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.8</fullName>
            </value>
            <value>
                <fullName>1.2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>