force-app/main/default/objects/Enquiry__c/fields/what_is_the_Floor_Strength_you_are_looki__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_Floor_Strength_you_are_looki__c</fullName>
    <label>what is the Floor Strength you looking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>