force-app/main/default/objects/Enquiry__c/fields/what_is_the_Pollution_Category_required__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_Pollution_Category_required__c</fullName>
    <label>what is the Pollution Category -required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>