force-app/main/default/objects/Enquiry__c/fields/what_is_the_product_you_will_manufacture__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_product_you_will_manufacture__c</fullName>
    <label>what is the product you will manufacture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>