force-app/main/default/objects/Enquiry__c/fields/what_is_the_product_you_will_store__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_product_you_will_store__c</fullName>
    <label>what is the product you will store</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>