force-app/main/default/objects/Enquiry__c/fields/what_is_the_Side_height_you_are_looking__c.field-meta.xml
<CustomField>
    <fullName>what_is_the_Side_height_you_are_looking__c</fullName>
    <label>what is the Side height you are looking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>