force-app/main/default/objects/Enquiry__c/fields/what_kind_of_Floor_Finish__c.field-meta.xml
<CustomField>
    <fullName>what_kind_of_Floor_Finish__c</fullName>
    <label>what kind of Floor Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>FM2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>