force-app/main/default/objects/Enquiry__c/fields/what_kind_of_Flooring__c.field-meta.xml
<CustomField>
    <fullName>what_kind_of_Flooring__c</fullName>
    <label>what kind of Flooring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epoxy</fullName>
            </value>
            <value>
                <fullName>VDF</fullName>
            </value>
            <value>
                <fullName>Concrete Flooring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>