force-app/main/default/objects/Enquiry__c/fields/what_size__c.field-meta.xml
<CustomField>
    <fullName>what_size__c</fullName>
    <label>what size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>